--- a/app.json
+++ b/app.json
@@ -37,6 +37,9 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "router": {
+      "ignore": ["babel.config.js", "nativewind-env.d.ts", "tailwind.config.js"]
     }
   }
 }
